# naft

./: .gitignore  LICENSE.md  README.md  REF-PHRACK-CISCO-IOS.md  naft-gfe.py  naft-icd.py  naft-ii.py  naft_iipf.py  naft_impf.py  naft_pfef.py  naft_uf.py  pyproject.toml  setup.py
.dev/: testenv.sh
naft/: naft.py
naft/modules/: gfe.py  icd.py  ii.py  iipf.py  impf.py  pfef.py  uf.py
